CHATS_SIT/force-app/main/default/objects/sfsit_t_sbsd_case_hist__x.object
<CustomObject>
    <description>sfsit$t_sbsd_case_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_sbsd_case_hist</externalName>
    <fields>
        <fullName>adr_city_provr__c</fullName>
        <description>adr_city_provr</description>
        <externalDeveloperName>adr_city_provr</externalDeveloperName>
        <label>provider city</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adr_line_1_provr__c</fullName>
        <description>adr_line_1_provr</description>
        <externalDeveloperName>adr_line_1_provr</externalDeveloperName>
        <label>Provider Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adr_state_provr__c</fullName>
        <description>adr_state_provr</description>
        <externalDeveloperName>adr_state_provr</externalDeveloperName>
        <label>Provider State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adr_zip_provr__c</fullName>
        <description>adr_zip_provr</description>
        <externalDeveloperName>adr_zip_provr</externalDeveloperName>
        <label>Provider Zip code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amt_income__c</fullName>
        <description>amt_income</description>
        <externalDeveloperName>amt_income</externalDeveloperName>
        <label>Income Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
	 <fields>
        <fullName>cde_asst_hsng__c</fullName>
        <description>cde_asst_hsng</description>
        <externalDeveloperName>cde_asst_hsng</externalDeveloperName>
        <label>Housing Assitance Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_county__c</fullName>
        <description>cde_county</description>
        <externalDeveloperName>cde_county</externalDeveloperName>
        <label>County code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>cde_lang_corr__c</fullName>
        <description>cde_lang_corr</description>
        <externalDeveloperName>cde_lang_corr</externalDeveloperName>
        <label>Correspondence language code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
   <fields>
        <fullName>cde_rcvd_packet_redet__c</fullName>
        <description>cde_rcvd_packet_redet</description>
        <externalDeveloperName>cde_rcvd_packet_redet</externalDeveloperName>
        <label>Code received Packet Redetermination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_reason_waiver_intv__c</fullName>
        <description>cde_reason_waiver_intv</description>
        <externalDeveloperName>cde_reason_waiver_intv</externalDeveloperName>
        <label>Interview waiver reason</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_school_dist__c</fullName>
        <description>cde_school_dist</description>
        <externalDeveloperName>cde_school_dist</externalDeveloperName>
        <label>School District</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_status_wtlst__c</fullName>
        <description>cde_status_wtlst</description>
        <externalDeveloperName>cde_status_wtlst</externalDeveloperName>
        <label>Waitlist status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnt_cc_need_child__c</fullName>
        <description>cnt_cc_need_child</description>
        <externalDeveloperName>cnt_cc_need_child</externalDeveloperName>
        <label>Needy Children count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnt_size_family__c</fullName>
        <description>cnt_size_family</description>
        <externalDeveloperName>cnt_size_family</externalDeveloperName>
        <label>Family Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dte_appln__c</fullName>
        <description>dte_appln</description>
        <externalDeveloperName>dte_appln</externalDeveloperName>
        <label>Application date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_begin_resdt__c</fullName>
        <description>dte_begin_resdt</description>
        <externalDeveloperName>dte_begin_resdt</externalDeveloperName>
        <label>Residency Begin date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_chgd_last_data_eligty__c</fullName>
        <description>dte_chgd_last_data_eligty</description>
        <externalDeveloperName>dte_chgd_last_data_eligty</externalDeveloperName>
        <label>Eligibility last modified date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <description>dte_end_effv</description>
        <externalDeveloperName>dte_end_effv</externalDeveloperName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_perfd_intv__c</fullName>
        <description>dte_perfd_intv</description>
        <externalDeveloperName>dte_perfd_intv</externalDeveloperName>
        <label>Interview preferred date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_rcvd_doc_intake_last__c</fullName>
        <description>dte_rcvd_doc_intake_last</description>
        <externalDeveloperName>dte_rcvd_doc_intake_last</externalDeveloperName>
        <label>Received Date Document Intake last</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_rcvd_packet_redet__c</fullName>
        <description>dte_rcvd_packet_redet</description>
        <externalDeveloperName>dte_rcvd_packet_redet</externalDeveloperName>
        <label>Received Date Redetermination packet</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_redet_case__c</fullName>
        <description>dte_redet_case</description>
        <externalDeveloperName>dte_redet_case</externalDeveloperName>
        <label>Case Retermination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_sent_packet_redet__c</fullName>
        <description>dte_sent_packet_redet</description>
        <externalDeveloperName>dte_sent_packet_redet</externalDeveloperName>
        <label>Redetermination packet sent date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_appln__c</fullName>
        <description>idn_appln</description>
        <externalDeveloperName>idn_appln</externalDeveloperName>
        <label>Application ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_case__c</fullName>
        <description>idn_case</description>
        <externalDeveloperName>idn_case</externalDeveloperName>
        <label>Case ID</label>
        <length>50</length>
        <referenceTargetField>T_SBSD_CASE__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Case Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_sbsd_case_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_case_hist__c</fullName>
        <description>idn_case_hist</description>
        <externalDeveloperName>idn_case_hist</externalDeveloperName>
        <label>Case ID History</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_case_legacy__c</fullName>
        <description>idn_case_legacy</description>
        <externalDeveloperName>idn_case_legacy</externalDeveloperName>
        <label>Legacy Case Identifier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_office__c</fullName>
        <description>idn_office</description>
        <externalDeveloperName>idn_office</externalDeveloperName>
        <label>Office ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_peak_appln__c</fullName>
        <description>idn_peak_appln</description>
        <externalDeveloperName>idn_peak_appln</externalDeveloperName>
        <label>Peak Application ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_provr__c</fullName>
        <description>idn_provr</description>
        <externalDeveloperName>idn_provr</externalDeveloperName>
        <label>Provider ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_sbsd_case_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_assist_provr__c</fullName>
        <description>ind_assist_provr</description>
        <externalDeveloperName>ind_assist_provr</externalDeveloperName>
        <label>Provider assistance indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_assmt_days_45__c</fullName>
        <description>ind_assmt_days_45</description>
        <externalDeveloperName>ind_assmt_days_45</externalDeveloperName>
        <label>45 Days Assesment Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_asst_hsng_addl__c</fullName>
        <description>ind_asst_hsng_addl</description>
        <externalDeveloperName>ind_asst_hsng_addl</externalDeveloperName>
        <label>Additional Housing Assitance Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_chgd_data_eligty__c</fullName>
        <description>ind_chgd_data_eligty</description>
        <externalDeveloperName>ind_chgd_data_eligty</externalDeveloperName>
        <label>Eligibility data changed?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_chp__c</fullName>
        <description>ind_chp</description>
        <externalDeveloperName>ind_chp</externalDeveloperName>
        <label>Medicaid/CHP+ Assistance?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_chp_addl__c</fullName>
        <description>ind_chp_addl</description>
        <externalDeveloperName>ind_chp_addl</externalDeveloperName>
        <label>Medicaid/CHP+ Assistance Additional?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_client_signed__c</fullName>
        <description>ind_client_signed</description>
        <externalDeveloperName>ind_client_signed</externalDeveloperName>
        <label>Signed client?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_elg_pre_provr__c</fullName>
        <description>ind_elg_pre_provr</description>
        <externalDeveloperName>ind_elg_pre_provr</externalDeveloperName>
        <label>Provider Pre Eligible?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_emerg_declrd_fed__c</fullName>
        <description>ind_emerg_declrd_fed</description>
        <externalDeveloperName>ind_emerg_declrd_fed</externalDeveloperName>
        <label>Emergency Declared Federal?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_food_pgm__c</fullName>
        <description>ind_food_pgm</description>
        <externalDeveloperName>ind_food_pgm</externalDeveloperName>
        <label>Food Program?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_food_pgm_addl__c</fullName>
        <description>ind_food_pgm_addl</description>
        <externalDeveloperName>ind_food_pgm_addl</externalDeveloperName>
        <label>Food Program additional?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_fs_rcvng__c</fullName>
        <description>ind_fs_rcvng</description>
        <externalDeveloperName>ind_fs_rcvng</externalDeveloperName>
        <label>FS receiving?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_fs_rcvng_addl__c</fullName>
        <description>ind_fs_rcvng_addl</description>
        <externalDeveloperName>ind_fs_rcvng_addl</externalDeveloperName>
        <label>FS receiving additional?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_head_start__c</fullName>
        <description>ind_head_start</description>
        <externalDeveloperName>ind_head_start</externalDeveloperName>
        <label>Additional Head Start Date</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_head_start_addl__c</fullName>
        <description>ind_head_start_addl</description>
        <externalDeveloperName>ind_head_start_addl</externalDeveloperName>
        <label>Head Start Date</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_idea_0_3__c</fullName>
        <description>ind_idea_0_3</description>
        <externalDeveloperName>ind_idea_0_3</externalDeveloperName>
        <label>If not, would you like information?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_idea_0_3_addl__c</fullName>
        <description>ind_idea_0_3_addl</description>
        <externalDeveloperName>ind_idea_0_3_addl</externalDeveloperName>
        <label>If not, would you like information?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_idea_3_5__c</fullName>
        <description>ind_idea_3_5</description>
        <externalDeveloperName>ind_idea_3_5</externalDeveloperName>
        <label>Household receives IDEA Part C (3-5)?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_idea_3_5_addl__c</fullName>
        <description>ind_idea_3_5_addl</description>
        <externalDeveloperName>ind_idea_3_5_addl</externalDeveloperName>
        <label>If not, would you like information?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_income_fed_other__c</fullName>
        <description>ind_income_fed_other</description>
        <externalDeveloperName>ind_income_fed_other</externalDeveloperName>
        <label>Other federal income ?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_income_fed_other_addl__c</fullName>
        <description>ind_income_fed_other_addl</description>
        <externalDeveloperName>ind_income_fed_other_addl</externalDeveloperName>
        <label>Other federal additional income ?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_issue_card_prim_crtkr__c</fullName>
        <description>ind_issue_card_prim_crtkr</description>
        <externalDeveloperName>ind_issue_card_prim_crtkr</externalDeveloperName>
        <label>card Issuance Primary Caretaker?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_leap__c</fullName>
        <description>ind_leap</description>
        <externalDeveloperName>ind_leap</externalDeveloperName>
        <label>Receiving Low-Income Energy Assistance?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_leap_addl__c</fullName>
        <description>ind_leap_addl</description>
        <externalDeveloperName>ind_leap_addl</externalDeveloperName>
        <label>If not, would you like information?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_other__c</fullName>
        <description>ind_other</description>
        <externalDeveloperName>ind_other</externalDeveloperName>
        <label>Other?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_other_addl__c</fullName>
        <description>ind_other_addl</description>
        <externalDeveloperName>ind_other_addl</externalDeveloperName>
        <label>If not, would you like information?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_pension__c</fullName>
        <description>ind_pension</description>
        <externalDeveloperName>ind_pension</externalDeveloperName>
        <label>Receiving Old Age Pension?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_pension_addl__c</fullName>
        <description>ind_pension_addl</description>
        <externalDeveloperName>ind_pension_addl</externalDeveloperName>
        <label>If not, would you like information?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_refugee__c</fullName>
        <description>ind_refugee</description>
        <externalDeveloperName>ind_refugee</externalDeveloperName>
        <label>Receiving Refugee Medical Assistance?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_refugee_addl__c</fullName>
        <description>ind_refugee_addl</description>
        <externalDeveloperName>ind_refugee_addl</externalDeveloperName>
        <label>If not, would you like information?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_resdt__c</fullName>
        <description>ind_resdt</description>
        <externalDeveloperName>ind_resdt</externalDeveloperName>
        <label>Residency indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_ssi__c</fullName>
        <description>ind_ssi</description>
        <externalDeveloperName>ind_ssi</externalDeveloperName>
        <label>Receiving Supplemental Security Income?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_ssi_addl__c</fullName>
        <description>ind_ssi_addl</description>
        <externalDeveloperName>ind_ssi_addl</externalDeveloperName>
        <label>If not, would you like information?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_tanf_month_six__c</fullName>
        <description>ind_tanf_month_six</description>
        <externalDeveloperName>ind_tanf_month_six</externalDeveloperName>
        <label>Received TANF six months?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_verif_pndg_data__c</fullName>
        <description>ind_verif_pndg_data</description>
        <externalDeveloperName>ind_verif_pndg_data</externalDeveloperName>
        <label>Pending verification?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_wic__c</fullName>
        <description>ind_wic</description>
        <externalDeveloperName>ind_wic</externalDeveloperName>
        <label>Receiving Women, Infants and Child Pgm?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_wic_addl__c</fullName>
        <description>ind_wic_addl</description>
        <externalDeveloperName>ind_wic_addl</externalDeveloperName>
        <label>If not, would you like information?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loc_elg_determ__c</fullName>
        <description>loc_elg_determ</description>
        <externalDeveloperName>loc_elg_determ</externalDeveloperName>
        <label>Who determined eligibility?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nam_faclty_provr__c</fullName>
        <description>nam_faclty_provr</description>
        <externalDeveloperName>nam_faclty_provr</externalDeveloperName>
        <label>Facility Name</label>
        <length>51</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nam_first_provr__c</fullName>
        <description>nam_first_provr</description>
        <externalDeveloperName>nam_first_provr</externalDeveloperName>
        <label>Facility First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nam_last_provr__c</fullName>
        <description>nam_last_provr</description>
        <externalDeveloperName>nam_last_provr</externalDeveloperName>
        <label>Facility last name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_wrkld__c</fullName>
        <description>nbr_seq_wrkld</description>
        <externalDeveloperName>nbr_seq_wrkld</externalDeveloperName>
        <label>Number Sequence workload</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pre_elg_determ__c</fullName>
        <description>pre_elg_determ</description>
        <externalDeveloperName>pre_elg_determ</externalDeveloperName>
        <label>Eligibility Determination date</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_other__c</fullName>
        <description>txt_other</description>
        <externalDeveloperName>txt_other</externalDeveloperName>
        <label>Other Text</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <label>Case History</label>
    <pluralLabel>Case History</pluralLabel>
</CustomObject>